syntax="proto2";

package yamcs.protobuf.archive;

option java_package = "org.yamcs.protobuf";

import "google/protobuf/timestamp.proto";

import "yamcs/api/annotations.proto";
import "yamcs/api/httpbody.proto";
import "yamcs/protobuf/pvalue/pvalue.proto";
import "yamcs/protobuf/yamcs.proto";

service StreamArchiveApi {
  
  // List parameter groups
  rpc ListParameterGroups(ListParameterGroupsRequest) returns (ParameterGroupInfo) {
    option (yamcs.api.route) = {
      get: "/api/archive/{instance}/parameter-groups"
    };
  }
  
  // List parameter history
  rpc ListParameterHistory(ListParameterHistoryRequest) returns (ListParameterHistoryResponse) {
    option (yamcs.api.route) = {
      get: "/api/stream-archive/{instance}/parameters/{name*}"
    };
  }
  
  // Streams back parameter values
  rpc StreamParameterValues(StreamParameterValuesRequest) returns (stream pvalue.ParameterData) {
    option (yamcs.api.route) = {
      post: "/api/stream-archive/{instance}:streamParameterValues"
      body: "*"
    };
  }
  
  // Get parameter samples
  rpc GetParameterSamples(GetParameterSamplesRequest) returns (pvalue.TimeSeries) {
    option (yamcs.api.route) = {
      get: "/api/stream-archive/{instance}/parameters/{name*}/samples"
    };
  }
  
  // Export parameter values in CSV format
  rpc ExportParameterValues(ExportParameterValuesRequest) returns (stream yamcs.api.HttpBody) {
    option (yamcs.api.route) = {
      get: "/api/archive/{instance}:exportParameterValues"
    };
  }
}

message StreamParameterValuesRequest {
  optional string instance = 1;
  optional google.protobuf.Timestamp start = 2;
  optional google.protobuf.Timestamp stop = 3;
  repeated NamedObjectId ids = 4;
}

message ParameterGroupInfo {
  repeated string group = 1;
}

message ListParameterGroupsRequest {
  optional string instance = 1;
}

message ListParameterHistoryRequest {
  optional string instance = 1;
  optional string name = 2;
  optional int64 pos = 3;
  optional int32 limit = 4;
  optional bool norepeat = 5;
  optional google.protobuf.Timestamp start = 6;
  optional google.protobuf.Timestamp stop = 7;
  optional string order = 8;
  optional bool norealtime = 9;
  optional string processor = 10;
  optional string source = 11;
}

message ListParameterHistoryResponse {
  repeated pvalue.ParameterValue parameter = 1;
  optional string continuationToken = 2;
}

message GetParameterSamplesRequest {
  optional string instance = 1;
  optional string name = 2;
  optional google.protobuf.Timestamp start = 3;
  optional google.protobuf.Timestamp stop = 4;
  optional int32 count = 5;
  optional bool norealtime = 6;
  optional string processor = 7;
  optional string source = 8;
}

message ExportParameterValuesRequest {
  optional string instance = 1;
  optional google.protobuf.Timestamp start = 2;
  optional google.protobuf.Timestamp stop = 3;
  repeated string parameters = 4;
  optional string namespace = 5; // Namespace used to display parameter names in csv header. Only used when no parameter ids were specified.
  repeated string extra = 6;
}
